Update friends link avatar.

--- a/public/links/index.html
+++ b/public/links/index.html
@@ -207,7 +207,7 @@
                     <li class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-4 mb-4">
                         <div class="shadow px-3 links-item-wrapper">
                             <div class="links-item-wrapper-header">
-                                <a target="_blank" href="https://ackerven.com"><img src="https://i.loli.net/2020/02/24/1795dSqpJ2isCtE.png" class="border links-item-wrapper-header-avatar" alt="Ackerven Sagiri"></a>
+                                <a target="_blank" href="https://ackerven.com"><img src="https://sdn.geekzu.org/avatar/0d137a98c842e6144ebbe2b65a3ba2f7?s=96&amp;amp;d=mm&amp;amp;r=g" class="border links-item-wrapper-header-avatar" alt="Ackerven Sagiri"></a>
                             </div>
                             <div class="links-item-wrapper-content">
                                 <div class="links-item-wrapper-content-name">
