Update friends link.

--- a/public/links/index.html
+++ b/public/links/index.html
@@ -179,11 +179,11 @@
                     <li class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-4 mb-4">
                         <div class="shadow px-3 links-item-wrapper">
                             <div class="links-item-wrapper-header">
-                                <a target="_blank" href="https://viernes.cn"><img src="https://dn-qiniu-avatar.qbox.me/avatar/820f82e09366f6da46996dc1443c83e3?size=500" class="border links-item-wrapper-header-avatar" alt="VIERNES"></a>
+                                <a target="_blank" href="https://ehak.cn"><img src="https://dn-qiniu-avatar.qbox.me/avatar/820f82e09366f6da46996dc1443c83e3?size=500" class="border links-item-wrapper-header-avatar" alt="VIERNES"></a>
                             </div>
                             <div class="links-item-wrapper-content">
                                 <div class="links-item-wrapper-content-name">
-                                    <a target="_blank" href="https://viernes.cn">VIERNES</a>
+                                    <a target="_blank" href="https://ehak.cn">VIERNES</a>
                                 </div>
                                 <div class="links-item-wrapper-content-desc">TODAY IS THE LAST DAY</div>
                             </div>
@@ -214,20 +214,6 @@
                                     <a target="_blank" href="https://ackerven.com">Ackerven Sagiri</a>
                                 </div>
                                 <div class="links-item-wrapper-content-desc">萝莉有三好，身娇腰柔易推倒!</div>
-                            </div>
-                        </div>
-                    </li>
-                    
-                    <li class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-4 mb-4">
-                        <div class="shadow px-3 links-item-wrapper">
-                            <div class="links-item-wrapper-header">
-                                <a target="_blank" href="https://hylpq.com"><img src="https://hylpq.com/favicon.ico" class="border links-item-wrapper-header-avatar" alt="Leoの小站"></a>
-                            </div>
-                            <div class="links-item-wrapper-content">
-                                <div class="links-item-wrapper-content-name">
-                                    <a target="_blank" href="https://hylpq.com">Leoの小站</a>
-                                </div>
-                                <div class="links-item-wrapper-content-desc">可能是个技术博客？</div>
                             </div>
                         </div>
                     </li>
