--- a/public/links/index.html
+++ b/public/links/index.html
@@ -165,13 +165,13 @@
                     <li class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-4 mb-4">
                         <div class="shadow px-3 links-item-wrapper">
                             <div class="links-item-wrapper-header">
-                                <a target="_blank" href="http://www.zyblog.xyz"><img src="https://dn-qiniu-avatar.qbox.me/avatar/3ecc178be38e9b8e03958aaf0dd94682" class="border links-item-wrapper-header-avatar" alt="絷缘的小站"></a>
+                                <a target="_blank" href="https://zhiyuandnc.github.io"><img src="https://dn-qiniu-avatar.qbox.me/avatar/3ecc178be38e9b8e03958aaf0dd94682" class="border links-item-wrapper-header-avatar" alt="絷缘的小站"></a>
                             </div>
                             <div class="links-item-wrapper-content">
                                 <div class="links-item-wrapper-content-name">
-                                    <a target="_blank" href="http://www.zyblog.xyz">絷缘的小站</a>
+                                    <a target="_blank" href="https://zhiyuandnc.github.io">絷缘的小站</a>
                                 </div>
-                                <div class="links-item-wrapper-content-desc">不忘初心，方得始终</div>
+                                <div class="links-item-wrapper-content-desc">如兄如师如友，可解惑可交心</div>
                             </div>
                         </div>
                     </li>
@@ -200,20 +200,6 @@
                                     <a target="_blank" href="https://www.qiqios.cn">阿斌运维日记</a>
                                 </div>
                                 <div class="links-item-wrapper-content-desc">一个运维大佬</div>
-                            </div>
-                        </div>
-                    </li>
-                    
-                    <li class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-4 mb-4">
-                        <div class="shadow px-3 links-item-wrapper">
-                            <div class="links-item-wrapper-header">
-                                <a target="_blank" href="https://ackerven.com"><img src="https://sdn.geekzu.org/avatar/0d137a98c842e6144ebbe2b65a3ba2f7?s=96&amp;amp;d=mm&amp;amp;r=g" class="border links-item-wrapper-header-avatar" alt="Ackerven Sagiri"></a>
-                            </div>
-                            <div class="links-item-wrapper-content">
-                                <div class="links-item-wrapper-content-name">
-                                    <a target="_blank" href="https://ackerven.com">Ackerven Sagiri</a>
-                                </div>
-                                <div class="links-item-wrapper-content-desc">萝莉有三好，身娇腰柔易推倒!</div>
                             </div>
                         </div>
                     </li>
