--- a/public/2020-harvest-summary/index.html
+++ b/public/2020-harvest-summary/index.html
@@ -146,11 +146,11 @@
 <p>  在此立下2021Flag，愿不负时光。</p>
 <ul>
 <li><i class="far fa-square fa-fw"></i> 重新过一遍计算机网络</li>
-<li><i class="far fa-square fa-fw"></i> 重新过一遍系统结构</li>
+<li><i class="far fa-check-square fa-fw"></i> 重新过一遍系统结构</li>
 <li><i class="far fa-square fa-fw"></i> 看关于Go进阶的5本书以上</li>
 <li><i class="far fa-square fa-fw"></i> 把Docker知识梳理出来</li>
-<li><i class="far fa-square fa-fw"></i> 学会CI/CD的某一项技术</li>
-<li><i class="far fa-square fa-fw"></i> 看关于Redis的书</li>
+<li><i class="far fa-check-square fa-fw"></i> 学会CI/CD的某一项技术</li>
+<li><i class="far fa-check-square fa-fw"></i> 看关于Redis的书</li>
 <li><i class="far fa-square fa-fw"></i> 整理并深入学习Nats、RabbitMQ</li>
 <li><i class="far fa-square fa-fw"></i> 看一点K8S相关方面的书</li>
 </ul>
