--- a/public/links/index.html
+++ b/public/links/index.html
@@ -124,7 +124,7 @@
     <div id="search-dropdown-mobile"></div>
 </div>
 <main class="main">
-            <div class="container"><div class="page single special"><h1 class="single-title animated pulse faster">友链链接</h1><div class="container-sm">
+            <div class="container"><div class="page single special"><h2 class="single-title animate__animated animate__pulse animate__faster">友链链接</h2><div class="container-sm">
         <div class="row">
             <article class="post-content custom-links-template">
                 <p>您好，我的朋友！ </p>
