--- a/public/git-clone-slow/index.html
+++ b/public/git-clone-slow/index.html
@@ -188,8 +188,8 @@
 </ol>
 <p><img
         class="lazyload"
-        data-src="https://pic.yqqy.top/blog/20200201/efIkpyjqj5Ju.png/interlace/1"
-        data-srcset="https://pic.yqqy.top/blog/20200201/efIkpyjqj5Ju.png/interlace/1, https://pic.yqqy.top/blog/20200201/efIkpyjqj5Ju.png 1.5x, https://pic.yqqy.top/blog/20200201/efIkpyjqj5Ju.png 2x"
+        data-src="https://pic.yqqy.top/blog/20200201/efIkpyjqj5Ju.png"
+        data-srcset="https://pic.yqqy.top/blog/20200201/efIkpyjqj5Ju.png, https://pic.yqqy.top/blog/20200201/efIkpyjqj5Ju.png 1.5x, https://pic.yqqy.top/blog/20200201/efIkpyjqj5Ju.png 2x"
         data-sizes="auto"
         alt="https://pic.yqqy.top/blog/20200201/efIkpyjqj5Ju.png"
         title="mark"></p>
